# clip-cifar10

./: .gitignore  dev.txt  drone_video_inference.py  eda.ipynb  model_pipeline.py  pyproject.toml  split_drone_images.py  test_submission.csv
