[project]
name = "clip-cifar10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "embetter[sbert]>=0.7.0",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "scikit-learn>=1.7.0",
    "umap-learn>=0.5.7",
]
